argocd/acc/nodejs-tekton-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: nodejs-tekton-app
    app.kubernetes.io/component: nodejs-tekton-app
    app.kubernetes.io/instance: nodejs-tekton-app
    app.kubernetes.io/name: nodejs-tekton-app
    app.kubernetes.io/part-of: nodejs-tekton-guide
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: 14-ubi8
  name: nodejs-tekton-app
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: nodejs-tekton-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nodejs-tekton-app
        deploymentconfig: nodejs-tekton-app
    spec:
      containers:
        - image: nexus.arbetsformedlingen.se/app-af-nexus-example/nodejs-tekton-app:1.1.0_20220927-120051_f867e38
          imagePullPolicy: Always
          name: nodejs-tekton-app
          ports:
            - containerPort: 9080
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
