argocd/acc/nodejs-tekton-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nodejs-tekton-app
    app.kubernetes.io/component: nodejs-tekton-app
    app.kubernetes.io/instance: nodejs-tekton-app
    app.kubernetes.io/name: nodejs-tekton-app
    app.kubernetes.io/part-of: nodejs-tekton-guide
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: 14-ubi8
  name: nodejs-tekton-app
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
  selector:
    app: nodejs-tekton-app
